# time

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  getpagesize.h  resuse.c  resuse.h  stamp-vti  time.c  time.info  version.texi
